syntax = "proto3";

package proto;

option go_package="genproto/user_service";

message StudentReq {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string password = 4;
}

message StudentRes {
    int64 id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string password = 5;
}

message GetAllParamsReq {
    int64 limit = 1;
    int64 page = 2;
    string search = 3;
}

message GetAllStudentsRes {
    repeated StudentRes students = 1;
    int64 count = 2;
}

message IdMsg {
    int64 id = 1;
}

message Empty {}

service Student {
    rpc CreateStudent(StudentReq) returns (StudentRes);
    rpc GetStudent(IdMsg) returns (StudentRes);
    rpc UpdateStudent(StudentRes) returns (StudentRes);
    rpc DeleteStudent(IdMsg) returns (Empty);
    rpc GetAllStudents(GetAllParamsReq) returns (GetAllStudentsRes);
}
